<resources>

    <string name="app_name">CST2335_Final_GroupProject_F19</string>

    <string name="recipe_page_name">Recipe Page</string>
    <string name="news_page_name">News Page</string>
    <string name="car_charger_page_name">Car Charger Finder Page</string>
    <string name="currency_exchange_page_name">Currency Exchange Page</string>
    <string name="recipe_title">Title: </string>
    <string name="search">SEARCH</string>
    <string name="menu_favourites">My Favourites</string>
    <string name="menu_help">App Help</string>

    <string name="enterAmount">Enter Amount</string>
    <string name="convertedValue">Converted Value</string>
    <string name="runConversion">Run Conversion</string>
    <string name="showHelp">Show Help</string>
    <string name="changeFavourites">Edit Favourites</string>
    <string name="favouritesHeader">Conversion Examples</string>
    <string name="inputCurrency">Input Currency</string>
    <string name="outputCurrency">Output Currency</string>
    <string name="author">Author: Kathleen Hardy</string>
    <string name="activityVersion">Activity Version 2</string>
    <string name="instructions">Instructions: Type a value into currency input and values into the currency boxes.</string>
    <string name="snackbar">You are already on this page.</string>

    <string name="car_charger_title">Electric Car Charger Finder</string>
    <string name="car_charger_latitude">Enter Latitude</string>
    <string name="car_charger_longitude">Enter Longitude</string>
    <string name="car_charger_search">Search For Nearby Stations</string>
    <string name="car_charger_google_maps">Load Directions In Google Maps</string>
    <string name="car_charger_favourites">Favourite This Station</string>
    <string name="car_charger_delete">Delete Station From Favourites</string>
    <string name="car_charger_author">Author: Kaylie Wan</string>
    <string name="car_charger_version">Activity Version 3.2.1</string>
    <string name="car_charger_instructions">Help: Enter latitude and longitude coordinates to search for nearby electric car charging stations.</string>

    <string name="recipe_positive">Chicken Breast</string>
    <string name="recipe_negative">Lasagna</string>

    <string name="favs">Favourites</string>
    <string name="addNewFav">Add a new favourite </string>
    <string name="newFavInputCurr">New favourite input currency: </string>
    <string name="newFavOutputCurr">New favourite output currency: </string>
    <string name="convFrom">This is the conversion: </string>
    <string name="Ok">Okay</string>

    <string name="newsSearch">Search Article</string>
    <string name="newsHelp">Help</string>
    <string name="newsDialog1">Author name: Lindsay Deng</string>
    <string name="newsDialog2">Database Version: 1.0</string>
    <string name="newsDialog3">Android Studio Version: 3.5.2</string>
    <string name="newsDialog4">Write in text box and click \'Search\' button</string>
    <string name="newsGoToPage">Go to Page</string>
    <string name="newsTitle">Title: </string>
    <string name="newsDescription">Description: </string>
    <string name="newsSavedArticles">Saved Articles </string>
    <string name="newsSave">Save </string>



</resources>
