<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newsDialogView"
        android:text="@string/newsDialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/newsDialogView2"
        android:text="@string/newsDialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/newsDialogView3"
        android:text="@string/newsDialog3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/newsDialogView4"
        android:text="@string/newsDialog4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>