<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/navigation_toolbar"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterAmount"
        android:id="@+id/currencyValueInput"
        android:layout_below="@id/navigation_toolbar"

        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/convertedValue"
        android:id="@+id/CurrencyValueOutput"
        android:layout_below="@id/currencyValueInput"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runConversion"
        android:id="@+id/runConversionButton"
        android:layout_below="@id/CurrencyValueOutput"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showHelp"
        android:id="@+id/showHelpMenuButton"
        android:layout_below="@id/runConversionButton"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeFavourites"
        android:id="@+id/enterFavourite"
        android:layout_below="@id/showHelpMenuButton"
        />

    <ProgressBar style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:max="100"
        android:id="@+id/progressBar"
        android:layout_below="@id/enterFavourite"
        android:progress="50"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favouritesHeader"
        android:id="@+id/favouritesListHeader"
        android:layout_below="@id/progressBar"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favouritesList"
        android:layout_below="@id/favouritesListHeader"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputCurrency"
        android:id="@+id/inputCurrency"
        android:layout_toRightOf="@id/currencyValueInput"
        android:layout_below="@id/navigation_toolbar"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/outputCurrency"
        android:id="@+id/outputCurrency"
        android:layout_toRightOf="@+id/CurrencyValueOutput"
        android:layout_below="@id/inputCurrency"
        />





</RelativeLayout>