<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/alertImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/help" />

    <TextView
        android:id="@+id/carChargerAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_charger_author" />

    <TextView
        android:id="@+id/carChargerVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_charger_version" />

    <TextView
        android:id="@+id/carChargerInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_charger_instructions" />

</LinearLayout>