<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/navigation_toolbar"
        />

    <TextView
        android:id="@+id/newsText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsTitle"
        android:textSize="30dp"

        />
    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/newsText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsDescription"
        android:textSize="30dp"

        />
    <TextView
        android:id="@+id/newsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/newsGoToPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsGoToPage"
        />

    <Button
        android:id="@+id/newsSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        />










</LinearLayout>